--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "prismic-dom": "^2.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "typescript": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@types/jest": "^26.0.20",
+    "@types/prismic-dom": "^2.1.1",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
